Refrencing in class examples to inject images into carousel

--- a/assignment-2--intro-to-internet-programming--cs-275--spring-2024-master/styles/main.css
+++ b/assignment-2--intro-to-internet-programming--cs-275--spring-2024-master/styles/main.css
@@ -8,11 +8,43 @@
 body {
   color: #ddd;
 }
-/*Following the gulp-templete-for-html-css-sass-js */
-:root{--width-of-a-div:100px;}
-section{border: solid block;width: calc(3*--with-of-a-div);}
-div{
-display: inline-block;
-width: var(--width-of-a-div);
-height: 100px;
+
+header {
+  font-weight: 600;
+  font-size: 16px;
+}
+
+header > h1 {
+  font-size: 32;
+  font-weight: 300;
+}
+
+div {
+  width: 640px;
+  padding-left: 20px;
+}
+
+/* Image display */
+div {
+  display: inline-block;
+  width: var(--width-of-a-div);
+  height: 100px;
+}
+
+div :nth-child(){
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+section {
+  --width-of-a-div: 100px;
+  border: solid;
+  width: calc(2*var(--width-of-a-div));
+}
+
+.second-section > div:nth-child(1){
+  display: flex;
+  background-color: white;
+  width: 100px;
 }
